# harfile

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codspeed.yml  release.yml  update-pre-commit.yml
benches/: entries.json  har.py
src/harfile/: __init__.py  _models.py  _version.py
tests/: test_har.py
